# Stat_386_Final_Project

./: .gitignore  Documentation.qmd  MANIFEST.in  TechnicalReport.qmd  Tutorial.qmd  eda.ipynb  main.py  pyproject.toml  setup.py
.ipynb_checkpoints/: passwords-checkpoint.py  player_base_pull-checkpoint.ipynb
Data_analysis/: eda.ipynb  game_data
Documentation_website/: Documentation.qmd  TechnicalReport.qmd  Tutorial.qmd  _quarto.yml
Documentation_website/docs/: Documentation.html  TechnicalReport.html  Tutorial.html  index.html  search.json
docs/: Documentation.html  TechnicalReport.html  Tutorial.html  index.html  search.json
src/stat386_final/: __init__.py  app.py  model.py  preprocess.py  read.py  viz.py
src/stat386_final/data/: eu_model.pkl  game_data.csv  global_model.pkl  jp_model.pkl  jp_scaler.pkl  na_model.pkl  other_model.pkl  pickling_models.ipynb
tests/: test_stat386_final.py
